--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.48",
     "@types/react": "^16.9.41",
+    "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.1",
+    "@types/uuid": "^8.0.0",
+    "DOM": "0.0.3",
     "react": "^16.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uuid": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
