--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.48",
     "@types/react": "^16.9.41",
     "@types/react-dnd": "^3.0.2",
+    "@types/react-dnd-html5-backend": "^3.0.2",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.1",
     "@types/uuid": "^8.0.0",
