--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.48",
-    "@types/react": "^16.9.41",
+    "@types/react": "^16.14.5",
+    "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.1",
+    "nanoid": "^3.1.22",
     "react": "^16.13.1",
+    "react-dnd": "^2.6.0",
+    "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "use-immer": "^0.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,6 +30,13 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "type": "commonjs",
+  "exports": {
+    ".": "./index.js",
+    "./jsx-dev-runtime": "./jsx-dev-runtime.js",
+    "./jsx-runtime": "./jsx-runtime.js",
+    "./": "./"
   },
   "browserslist": {
     "production": [
