--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.1",
     "nanoid": "^3.1.22",
-    "react": "^16.13.1",
-    "react-dnd": "^2.6.0",
-    "react-dnd-html5-backend": "^2.6.0",
+    "react": "^16.14.0",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^16.13.1",
+    "react-jsx": "^1.0.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "typescript": "^3.7.5",
